--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,10 @@
-<p>search works!</p>
+<div
+  *ngrxLet="{ theme: theme$, width: width$ } as observables"
+  [ngClass]="[observables.theme, observables.width]"
+>
+  <form>
+    <img src="../../assets/images/icon-search.svg" alt="Search" />
+    <input placeholder="Search GitHub username…" type="text" />
+    <button type="submit">Search</button>
+  </form>
+</div>
