--- a/src/app/header/styles/header.component.css
+++ b/src/app/header/styles/header.component.css
@@ -11,7 +11,7 @@
 
 .other-theme {
   align-items: center;
-  background: transparent;
+  background-color: transparent;
   border: none;
   color: inherit;
   cursor: pointer;
