--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
     <span class="theme">{{ otherTheme(observables.theme) }}</span>
     <img
       [src]="otherThemeImgSrc(observables.theme)"
-      [alt]="otherThemeImgAlt(observables.theme)"
+      [alt]="otherThemeIcon(observables.theme)"
     />
   </div>
 </div>
