--- a/src/app/styles/mobile.app.component.css
+++ b/src/app/styles/mobile.app.component.css
@@ -2,6 +2,10 @@
   padding: 1.94rem 1.5rem 4.94rem;
 }
 
+.mobile header {
+  margin-bottom: 2.25rem;
+}
+
 .mobile app-search {
   margin-bottom: 1rem;
 }
