--- a/src/app/data/styles/mobile.data.component.css
+++ b/src/app/data/styles/mobile.data.component.css
@@ -1,6 +1,6 @@
 .mobile.container {
   column-gap: 1.22rem;
-  font-size: 0.81rem;
+  /* font-size: 0.81rem; */
   grid-template-areas:
     "avatar header"
     "bio    bio   "
