--- a/src/app/search/styles/search.component.css
+++ b/src/app/search/styles/search.component.css
@@ -17,6 +17,12 @@ input {
   outline: none;
 }
 
+.not-found {
+  color: #f74646;
+  font-weight: 700;
+  margin-right: 1.5rem;
+}
+
 button {
   background-color: var(--color-1);
   border: none;
